# wmc

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
packaging/homebrew/: wmc.rb
src/: config.rs  lib.rs  main.rs  utils.rs
src/cli/: args.rs  commands.rs  mod.rs
src/db/: mod.rs
src/media/: cleaner.rs  mod.rs  scanner.rs  types.rs
src/tui/: app.rs  dashboard.rs  layout.rs  mod.rs  types.rs
